--- a/readme
+++ b/readme
@@ -1,1 +1,1 @@
-Utilize HTML, CSS, and JS to create a URL Shortner. How to code a url shortner with api in javascript! Has a nice mesh gradient background and glassmorphism design. 
+Utilize HTML, CSS, and JS to create a URL Shortner. Learning different ways code a url shortner with api in javascript! Added a nice mesh gradient background and glassmorphism design to enhance this project.
