change to name of prj and style adjustments

--- a/readme
+++ b/readme
@@ -1,1 +1,1 @@
-Utilize HTML, CSS, and JS to create a URL Shortner. Learning different ways code a url shortner with api in javascript! Added a nice mesh gradient background and glassmorphism design to enhance this project.
+Utilize HTML, CSS, and JS to create a URL Simplifier. 
